// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PdapFormV2 > calls submit event with form values on valid submission 1`] = `
<form class="pdap-form" id="test" name="test">
  <!--v-if-->
  <div class="pdap-input">
    <label for="name">Name</label>
    <!--v-if-->
    <input id="name" name="name" placeholder="Name" type="text">
  </div>
  <div class="pdap-input">
    <label for="email">Email</label>
    <!--v-if-->
    <input id="email" name="email" placeholder="Email" type="text">
  </div>
  <div class="pdap-input pdap-input-password">
    <label for="password">Password</label>
    <!--v-if-->
    <div class="pdap-input-password-wrapper">
      <input id="password" name="password" placeholder="Password" type="password">
      <button aria-label="Show text" class="pdap-input-password-toggle" type="button">
        <svg aria-hidden="true" class="svg-inline--fa fa-eye" data-icon="eye" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
          <path class="" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" fill="currentColor" />
        </svg>
      </button>
    </div>
  </div>
  <div class="pdap-input pdap-input-checkbox">
    <!--v-if-->
    <input checked id="ice-cream" name="ice-cream" type="checkbox" value="true">
    <label for="ice-cream">Ice Cream</label>
  </div>
  <div class="pdap-input">
    <label for="notes">Notes?</label>
    <!--v-if-->
    <textarea id="notes" name="notes" placeholder="Notes" type="text"></textarea>
  </div>
</form>
`;

exports[`PdapFormV2 > renders default error message when form has errors 1`] = `
<form class="pdap-form" id="test" name="test">
  <div class="pdap-form-error-message">Please update this form to correct the errors</div>
  <div class="pdap-input pdap-input-error">
    <label for="name">Name</label>
    <div class="pdap-input-error-message">Value is required</div>
    <input id="name" name="name" placeholder="Name" type="text">
  </div>
  <div class="pdap-input pdap-input-error">
    <label for="email">Email</label>
    <div class="pdap-input-error-message">Value is required</div>
    <input id="email" name="email" placeholder="Email" type="text">
  </div>
  <div class="pdap-input pdap-input-password">
    <label for="password">Password</label>
    <!--v-if-->
    <div class="pdap-input-password-wrapper">
      <input id="password" name="password" placeholder="Password" type="password">
      <button aria-label="Show text" class="pdap-input-password-toggle" type="button">
        <svg aria-hidden="true" class="svg-inline--fa fa-eye" data-icon="eye" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
          <path class="" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" fill="currentColor" />
        </svg>
      </button>
    </div>
  </div>
  <div class="pdap-input pdap-input-checkbox">
    <!--v-if-->
    <input id="ice-cream" name="ice-cream" type="checkbox" value="false">
    <label for="ice-cream">Ice Cream</label>
  </div>
  <div class="pdap-input pdap-input-error">
    <label for="notes">Notes?</label>
    <div class="pdap-input-error-message">Notes are required</div>
    <textarea id="notes" name="notes" placeholder="Notes" type="text"></textarea>
  </div>
</form>
`;

exports[`PdapFormV2 > renders error message slot when provided 1`] = `
<form class="pdap-form" id="test" name="test">
  <div>Custom Error Message</div>
</form>
`;

exports[`PdapFormV2 > renders error message when errorMessage prop is provided 1`] = `
<form class="pdap-form" id="test" name="test">
  <div class="pdap-form-error-message">Form Error</div>
  <div class="pdap-input">
    <label for="name">Name</label>
    <!--v-if-->
    <input id="name" name="name" placeholder="Name" type="text">
  </div>
  <div class="pdap-input">
    <label for="email">Email</label>
    <!--v-if-->
    <input id="email" name="email" placeholder="Email" type="text">
  </div>
  <div class="pdap-input pdap-input-password">
    <label for="password">Password</label>
    <!--v-if-->
    <div class="pdap-input-password-wrapper">
      <input id="password" name="password" placeholder="Password" type="password">
      <button aria-label="Show text" class="pdap-input-password-toggle" type="button">
        <svg aria-hidden="true" class="svg-inline--fa fa-eye" data-icon="eye" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
          <path class="" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" fill="currentColor" />
        </svg>
      </button>
    </div>
  </div>
  <div class="pdap-input pdap-input-checkbox">
    <!--v-if-->
    <input id="ice-cream" name="ice-cream" type="checkbox" value="false">
    <label for="ice-cream">Ice Cream</label>
  </div>
  <div class="pdap-input">
    <label for="notes">Notes?</label>
    <!--v-if-->
    <textarea id="notes" name="notes" placeholder="Notes" type="text"></textarea>
  </div>
</form>
`;

exports[`PdapFormV2 > renders the form element 1`] = `
<form class="pdap-form" id="test" name="test">
  <!--v-if-->
  <div class="pdap-input">
    <label for="name">Name</label>
    <!--v-if-->
    <input id="name" name="name" placeholder="Name" type="text">
  </div>
  <div class="pdap-input">
    <label for="email">Email</label>
    <!--v-if-->
    <input id="email" name="email" placeholder="Email" type="text">
  </div>
  <div class="pdap-input pdap-input-password">
    <label for="password">Password</label>
    <!--v-if-->
    <div class="pdap-input-password-wrapper">
      <input id="password" name="password" placeholder="Password" type="password">
      <button aria-label="Show text" class="pdap-input-password-toggle" type="button">
        <svg aria-hidden="true" class="svg-inline--fa fa-eye" data-icon="eye" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
          <path class="" d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" fill="currentColor" />
        </svg>
      </button>
    </div>
  </div>
  <div class="pdap-input pdap-input-checkbox">
    <!--v-if-->
    <input id="ice-cream" name="ice-cream" type="checkbox" value="false">
    <label for="ice-cream">Ice Cream</label>
  </div>
  <div class="pdap-input">
    <label for="notes">Notes?</label>
    <!--v-if-->
    <textarea id="notes" name="notes" placeholder="Notes" type="text"></textarea>
  </div>
</form>
`;
